--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ nav ul li{
 nav ul li:hover{
     border-bottom-color: black;
 }
+.imageNumeroUn{
+    margin-top: 5%;
+    img{
+        transition: filter 0.5s;
+        filter: brightness(50%);
+        filter: blur(5px);
+    }
+    img:hover{
+        filter: brightness(100%);
+        filter: blur(0px);
+    }
+}
