--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Le Css */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 body{
     padding: 0 2%;
     margin: 0;
@@ -34,6 +35,32 @@ nav .LeProfile{
     }
 }
 
+
+
+@media screen and (max-width: 700px) {
+    nav{
+        justify-content: center;
+        ul{
+            display: none;
+        }
+    }       
+    .section1_de_la_page{
+        margin: 5%;
+        header{
+            margin-top: 10%;
+            max-width: 100%;
+        }
+    }
+    footer{
+        justify-content: flex-start;
+        text-wrap: wrap;
+        flex-wrap: wrap;
+    }
+    footer .Colone{
+        width: 80%;
+    }
+}
+
 nav ul{
     display: flex;
     list-style-type: none;
@@ -51,15 +78,63 @@ nav ul li{
 nav ul li:hover{
     border-bottom-color: black;
 }
-.imageNumeroUn{
+
+.section1_de_la_page{
+    margin: 4%;
+    header{
+        margin-top: 5%;
+        max-width: 80%;
+        h1{
+            margin: 0;
+            /* text-transform:none; */
+            font-size: 3dvw;
+        }
+        p{
+            line-height: 30px;
+            color: #80808080;
+        }
+    }
+    .imageNumeroUn{
+        margin-top: 5%;
+        img{
+            transition: filter 0.5s;
+            filter: brightness(50%);
+            filter: blur(5px);
+        }
+        img:hover{
+            filter: brightness(100%);
+            filter: blur(0px);
+        }
+    }
+}
+footer{
     margin-top: 5%;
-    img{
-        transition: filter 0.5s;
-        filter: brightness(50%);
-        filter: blur(5px);
+    margin-right: -2.1%;
+    margin-left: -2.1%;
+    display: flex;
+    text-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: black;
+    color: azure;
+    padding: 5px;
+    padding-bottom: 10%;
+    .Colone{
+        a{
+            text-decoration: none;
+        }
+        p{
+            font-size: 12px;
+            cursor: pointer;
+        }
+        p:hover{
+            color: blue;
+        }
     }
-    img:hover{
-        filter: brightness(100%);
-        filter: blur(0px);
-    }
+}
+.kaliSVG{
+    margin-top: 0%;
+}
+.footer-logo-kaliSVG{
+    max-width:30%;
 }
