--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ nav{
     margin-left: -2.1%;
     padding-right: 2.1%;
     padding-left: 2.1%;
+    z-index: 10;
 }
 nav .LeProfile{
     display: flex;
