On branch css2 : z-index: 10; pour width < 700px Your branch is up to date with 'origin/css2'.
Changes to be committed:
	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav .LeProfile{
         ul{
             display: none;
         }
+        z-index: 10;
     }       
     .section1_de_la_page{
         margin: 5%;
