--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav{
     padding-right: 2.1%;
     padding-left: 2.1%;
     z-index: 10;
+    box-shadow: 25px 25px 25px #00000030;
 }
 nav .LeProfile{
     display: flex;
