"Updated .gitignore to comment out '-images' line and added cursor styles to 'a' elements in style.css"

--- a/style.css
+++ b/style.css
@@ -53,6 +53,13 @@ nav .LeProfile{
             h4{
                 margin: 0;
             }
+            a{
+                text-decoration: none;
+                color: black;
+                /* cursor: zoom-in; */
+                cursor: nwse-resize;
+                cursor: url(images/SnK\ Blade.cur),auto;
+            }
         }
     }
 }
