"Added styles to nav .LeProfile: background-color, border-radius, padding, and border."

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ nav .LeProfile{
                 /* cursor: zoom-in; */
                 cursor: nwse-resize;
                 cursor: url(images/SnK\ Blade.cur),auto;
+                background-color: blanchedalmond;
+                border-radius: 10px;
+                padding: 5px;
+                border: dotted blue 1px;
             }
         }
     }
