"Refactored CSS styles and updated HTML content in Cyber/styleCyber.css and Cyber/templateCyber.html files"

--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -2,185 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import '../style.css';
+/* Style css de base ↑ */
+/* Style css override/surcharger ↓ */
 
 body{
-    padding: 0 2%;
-    margin: 0;
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-    scroll-behavior: smooth;
-}
-
-nav{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    position: sticky;
-    top: 0;
-    margin-right: -2.1%;
-    margin-left: -2.1%;
-    padding-right: 2.1%;
-    padding-left: 2.1%;
-    z-index: 10;
-    box-shadow: 25px 25px 25px #00000030;
-}
-nav .LeProfile{
-    display: flex;
-    align-items: center;
-    img{
-        width: 40px;
-        height: 40px;
-        border-radius: 40%;
-    }
-    h1{
-        margin-left: 10px;
-        font-size: 30px;
-    }
-}
-
-.section1_de_la_page .colonne2Div{
-    .LesColone{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        .item{
-            max-width: 195px;
-            margin-right: 20px;
-            h4{
-                margin: 0;
-            }
-            a{
-                text-decoration: none;
-                color: black;
-                /* cursor: zoom-in; */
-                cursor: nwse-resize;
-                cursor: url(images/SnK\ Blade.cur),auto;
-                background-color: blanchedalmond;
-                border-radius: 10px;
-                padding: 5px;
-                border: dotted blue 1px;
-            }
-        }
-    }
-}
-
-
-@media screen and (max-width: 700px) {
-    nav{
-        justify-content: center;
-        ul{
-            display: none;
-        }
-        z-index: 10;
-        .LeProfile{
-            img{
-                width: min(10dvw,10dvh);
-                height: min(10dvw,10dvh);
-            }
-            h1{
-                margin-left: min(2dvw,2dvh);
-                font-size: min(6dvw,6dvh);
-            }
-        }
-    }       
-    .section1_de_la_page{
-        margin: 5%;
-        header{
-            margin-top: 10%;
-            max-width: 100%;
-        }
-    }
-    footer{
-        justify-content: flex-start;
-        text-wrap: wrap;
-        flex-wrap: wrap;
-    }
-    footer .Colonne{
-        width: 80%;
-    }
-}
-
-nav ul{
-    display: flex;
-    list-style-type: none;
-    a{
-        text-decoration: none;
-        color: black;
-    }
-}
-nav ul li{
-    margin-left: 20 px;
-    cursor: pointer;
-    border-bottom: 1px solid white;
-    margin: 10px;
-}
-nav ul li:hover{
-    border-bottom-color: black;
-}
-
-.section1_de_la_page{
-    margin: 4%;
-    header{
-        margin-top: 5%;
-        max-width: 80%;
-        h1{
-            margin: 0;
-            /* text-transform:none; */
-            font-size: 3dvw;
-        }
-        p{
-            line-height: 30px;
-            color: #80808080;
-        }
-    }
-    .imageNumeroUn{
-        margin-top: 5%;
-        img{
-            transition: filter 0.5s;
-            filter: brightness(50%);
-            filter: blur(5px);
-        }
-        img:hover{
-            filter: brightness(100%);
-            filter: blur(0px);
-        }
-    }
-}
-footer{
-    margin-top: 5%;
-    margin-right: -2.1%;
-    margin-left: -2.1%;
-    display: flex;
-    text-wrap: wrap;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: black;
-    color: azure;
-    padding: 5px;
-    padding-bottom: 10%;
-    .Colonne{
-        a{
-            text-decoration: none;
-            color: azure;
-        }
-        p{
-            font-size: 12px;
-            cursor: pointer;
-        }
-        p:hover{
-            color: blue;
-        }
-    }
-}
-.kaliSVG{
-    margin-top: 0%;
-}
-.footer-logo-kaliSVG{
-    max-width:30%;
+    background-color: none;
 }
 
