On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/styleCyber.css

--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -64,4 +64,5 @@ nav ul li:hover{
 .fin{
     background-image: linear-gradient( #00000000 10%, #000000FF 90%);
     height: 50px;
+    margin: 0;
 }
