--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -31,6 +31,19 @@ body{
         80px 80px,
         80px 80px,
         80px 80px;
+    color: #FFF;
+}
+
+nav{
+    background-color: black;
+    color: #FFF;
+    top: 0;
+    margin-right: -2.1%;
+    margin-left: -2.1%;
+    padding-right: 2.1%;
+    padding-left: 2.1%;
+    z-index: 10;
+    box-shadow: 25px 25px 25px #00000030;
 }
 
 nav ul{
@@ -38,17 +51,17 @@ nav ul{
     list-style-type: none;
     a{
         text-decoration: none;
-        color: black;
+        color: white;
     }
 }
 nav ul li{
     margin-left: 20 px;
     cursor: pointer;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid black;
     margin: 10px;
 }
 nav ul li:hover{
-    border-bottom-color: black;
+    border-bottom-color: white;
 }
 
 
@@ -63,6 +76,11 @@ nav ul li:hover{
 
 .fin{
     background-image: linear-gradient( #00000000 10%, #000000FF 90%);
+    height: 50px;
+    margin: 0;
+}
+.DebutDeLafin{
+    background-image: linear-gradient( #000000FF 10%, #00000000 90%);
     height: 50px;
     margin: 0;
 }
