"Updated HTML and CSS files: added 'helpDoc' class to certain elements in Cyber.html, and added cursor styles for '.helpDoc' and '.Option' classes in styleCyber.css." On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/styleCyber.css
	new file:   images/Luffy Help.cur

--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -154,6 +154,7 @@ nav ul li:hover{
         unicode-bidi: embed;
         font-family: monospace;
         white-space: pre;
+        cursor: url(../images/SnK\ Blade.cur),auto;
         .Option{
             color: green;
             .OneLetterOption{
@@ -175,6 +176,7 @@ nav ul li:hover{
         .fichier{
             color: yellow;
         }
+        .helpDoc{cursor: url(../images/Luffy\ Help.cur),auto;}
     }
 
 }
