"Added cursor property to nav .LeProfile with custom cursor image"
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   images/Luffy Person.cur
	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ nav .LeProfile{
         width: 40px;
         height: 40px;
         border-radius: 40%;
+        cursor: url(../images/Luffy\ Person.cur),auto;
+        cursor: url(images/Luffy\ Person.cur),auto;
     }
     h1{
         margin-left: 10px;
