"Updated margin property for .fin and .DebutDeLafin classes in styleCyber.css"
issue solve

On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Cyber/styleCyber.css

--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -193,10 +193,10 @@ nav ul li:hover{
 .fin{
     background-image: linear-gradient( #00000000 10%, #000000FF 90%);
     height: 50px;
-    margin: 0;
+    margin: 0% -3%;
 }
 .DebutDeLafin{
     background-image: linear-gradient( #000000FF 10%, #00000000 90%);
     height: 50px;
-    margin: 0;
+    margin: 0% -3%;
 }
