"Updated Cyber.html: changed button onclick function from testInputC to testInputX and corresponding output div id from outputC to outputX. Added CSS rule to set input background color to red."

--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -186,6 +186,9 @@ nav ul li:hover{
         }
         .helpDoc{cursor: url(../images/Luffy\ Help.cur),auto;}
     }
+    input{
+        background-color: red;
+    }
 
 }
 
