--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -187,10 +187,23 @@ nav ul li:hover{
         .helpDoc{cursor: url(../images/Luffy\ Help.cur),auto;}
     }
     input{
-        background-color: red;
+        /* background-color: #5a5a5aFF; */
+        /* animation: NomDeL_Animation1 1s ease-in-out 1s infinite; */
+        animation-name: example;
+        animation-duration: 1s;
+        animation-iteration-count: infinite
     }
-
 }
+@keyframes example {
+    from {background-color: red;}
+    to {background-color: yellow;}
+  }
+/* @keyframes NomDeL_Animation1 {
+    0%{background-color: #5a5a5a;}
+    10%,20%{background-color: #5a5a5a33;}
+    50%,70%{background-color: #33333333;}
+    100%{background-color: #10101010;}
+} */
 
 @media screen and (max-width: 700px) {
     nav{
