--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -198,12 +198,12 @@ nav ul li:hover{
     from {background-color: red;}
     to {background-color: yellow;}
   }
-/* @keyframes NomDeL_Animation1 {
+@keyframes NomDeL_Animation1 {
     0%{background-color: #5a5a5a;}
     10%,20%{background-color: #5a5a5a33;}
     50%,70%{background-color: #33333333;}
     100%{background-color: #10101010;}
-} */
+}
 
 @media screen and (max-width: 700px) {
     nav{
