--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -187,11 +187,11 @@ nav ul li:hover{
         .helpDoc{cursor: url(../images/Luffy\ Help.cur),auto;}
     }
     input{
-        /* background-color: #5a5a5aFF; */
-        /* animation: NomDeL_Animation1 1s ease-in-out 1s infinite; */
-        animation-name: example;
+        background-color: #5a5a5aFF;
+        /* animation-name: example;
         animation-duration: 1s;
-        animation-iteration-count: infinite
+        animation-iteration-count: infinite; */
+        animation: NomDeL_Animation1 1s ease-in-out 1s infinite;
     }
 }
 @keyframes example {
