--- a/Cyber/styleCyber.css
+++ b/Cyber/styleCyber.css
@@ -191,7 +191,8 @@ nav ul li:hover{
         /* animation-name: example;
         animation-duration: 1s;
         animation-iteration-count: infinite; */
-        animation: NomDeL_Animation1 1s ease-in-out 1s infinite;
+        animation: NomDeL_Animation1 5s ease-in-out 1s infinite;
+        color: #FFF;
     }
 }
 @keyframes example {
